--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "express": "^4.17.1"
   },
+  "devDependencies": {
+    "jest": "^27.0.0"  
+  },
   "devDependencies": {},
   "author": "",
   "license": "ISC"
