--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "jest"
+    "test": "echo \"No tests yet!\""
   },
   "dependencies": {
     "express": "^4.17.1"
